trying to fix social buttons on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,8 @@ button {
 	.social {
 		width: 24px;
 		padding: none;
+		text-align: center;
+		vertical-align: middle;
 	}
 
 	.island-1-3 {
